--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Github Repo </title>
+  <link rel="stylesheet" href="color.css">
 </head>
 <body>
   <p>this is Sakib Al maruf </p>
-  
+
 </body>
 </html>
